package domain;

public class Elevm {
    private int elevm;

    public Elevm(int elevm) {
        this.elevm = elevm;
    }

    public int getElevm() {
        return elevm;
    }
}
