package domain;

public class PowerKw {
    private int kw;

    public PowerKw(int kw) {
        this.kw = kw;
    }

    public int getKw() {
        return kw;
    }
}
