package domain;

public class Stalls {
    private int numberOfStalls;

    public Stalls(int n){
        this.numberOfStalls = n;
    }

    public int getNumber() {
        return numberOfStalls;
    }
}
