package domain;

public class State {

    private String name;

    public State(String name){
        this.name=name;
    }
}
