package domain;

public class Zip {

    private String code;

    public Zip(String code){
        this.code=code;
    }
}
